[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"                                    # 高效处理网络 buffer 的库
dashmap = "5.5"                                # 并发 HashMap
http = "1"                                     # 我们使用 HTTP status code 所以引入这个类型库
prost = "0.12"                                 # 处理 protobuf 的代码
thiserror = "1"                                # 错误定义和处理
tracing = "0.1"                                # 日志处理
sled = "0.34"
flate2 = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"

[dev-dependencies]
anyhow = "1" # 错误处理
async-bincode = { version = "0.7", features = ["tokio"] }
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] } # 异步网络库
tokio-util = { version = "0.7", features = ["codec"] }
tracing-subscriber = "0.3" # 日志处理
tempfile = "3"
certify = "0.5"
blake3 = "1.5"
rayon = "1.10"

[build-dependencies]
prost-build = "0.12" # 编译 protobuf
